# ShieldGate

./: .env.example  .gitignore  Case Study.md  LICENSE  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/backend/: .env.example  pyproject.toml  pyrightconfig.json
apps/backend/src/shieldgate/: app.py  auth.py  config.py  db.py  demo_seed.py  horizon.py  jwt_auth.py  provenance.py  refs.py  scheduler.py  shadow.py
apps/backend/src/shieldgate/approvals/: engine.py  prohibited.py  scoring.py
apps/backend/src/shieldgate/audit/: chain.py
apps/backend/src/shieldgate/classify/: ollama.py  output.py  patterns.py  providers.py
apps/backend/src/shieldgate/policy/: engine.py  suggest.py
apps/backend/src/shieldgate/routes/: approvals.py  audit.py  classify.py  decisions.py  events.py  horizon.py  (+6 more)
apps/backend/tests/: conftest.py  test_approvals.py  test_approvals_api.py  test_approvals_export.py  test_audit_api.py  test_chain.py  test_classifier_eval.py  test_classifier_startup.py  test_classify_api.py  test_cost.py  test_decisions.py  test_decisions_admin.py  test_demo_seed.py  test_events.py  test_exec_settings.py  test_followups_migration.py  test_generated_models.py  test_health.py  test_horizon.py  test_ollama.py  test_output_scan.py  test_patterns.py  test_policy_engine.py  test_prohibited.py  test_provenance.py  test_providers.py  test_redact.py  test_registry.py  test_rls_coaching.py  test_scoring.py  test_shadow.py  test_sla.py  test_snapshot.py  test_suggest.py
apps/backend/tests/fixtures/: classifier_eval_corpus.json
(+117 files in other folders)
